--- a/php-beers/index.html
+++ b/php-beers/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <!-- saved from url=(0065)http://materializecss.com/templates/starter-template/preview.html -->
-<html lang="en"><head>
+<html lang="en">
+<head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
   <title>Nutri-info</title>
 
-  <link href="http://people.duke.edu/%7Eaoo12/databases/Media/dukedining.png" rel="icon">
+  <link href='./Media/dukedining.png' rel='icon'>
 
   <!-- CSS  -->
-  <link href="Nutri-info_files/icon.css" rel="stylesheet">
-  <link href="Nutri-info_files/icon.html" rel="stylesheet">
-  <link href="Nutri-info_files/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
-  <link href="Nutri-info_files/materialize_002.css" type="text/css" rel="stylesheet" media="screen,projection">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./materialize/css/icon" rel="stylesheet">
+  <link href="./materialize/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection">
+  <link href="./materialize/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
   <style>img.chromoji { width:1em !important; height:1em !important; }.chromoji-font, #chromoji-font { font-size:1em !important; }</style>
 </head>
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Duke Food</a>
+  <!-- <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Duke Food mother</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="http://dining.duke.edu/">Duke Dining</a></li>
+        <li><a href="http://dining.duke.edu">Duke Dining</a></li>
+        <li><a href='#'>Log Out</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav" style="transform: translateX(-100%);">
@@ -29,7 +31,10 @@
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
-  </nav>
+  </nav> -->
+
+  <nav id='topbar'></nav>
+
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
@@ -56,11 +61,7 @@
             <h2 class="center light-blue-text">Unified</h2>
             <h5 class="center">One location for restaurant times</h5>
 
-            <p class="light">We were tired of going all the way to Duke 
-Dining's website only to find a mess of a list of restaurants with 
-varying times all over the place. So what we have made here is one 
-location that can wither everything down for you and show you what's 
-open right now and what they're serving.</p>
+            <p class="light">We were tired of going all the way to Duke Dining's website only to find a mess of a list of restaurants with varying times all over the place. So what we have made here is one location that can wither everything down for you and show you what's open right now and what they're serving.</p>
           </div>
         </div>
 
@@ -69,11 +70,7 @@ open right now and what they're serving.</p>
             <h2 class="center light-blue-text">Nutrition</h2>
             <h5 class="center">Find your calories</h5>
 
-            <p class="light">We also didn't like that it is such an 
-arduous process to find out how many calories your banana pudding cake 
-had, so we added all of that here so that users can easily find out how 
-much tey're eating. Whether it's bulking or cutting season, you'll know 
-just enought to keep your macros right and get those gainz or cuts.</p>
+            <p class="light">We also didn't like that it is such an arduous process to find out how many calories your banana pudding cake had, so we added all of that here so that users can easily find out how much tey're eating. Whether it's bulking or cutting season, you'll know just enought to keep your macros right and get those gainz or cuts.</p>
           </div>
         </div>
 
@@ -82,9 +79,7 @@ just enought to keep your macros right and get those gainz or cuts.</p>
             <h2 class="center light-blue-text">Aesthetics</h2>
             <h5 class="center">Beautiful aesthetics</h5>
 
-            <p class="light">Let's be honest, the dining website is a 
-little messy. We're making everything look nice so that you never have 
-any holdups about visiting our beautiful site.</p>
+            <p class="light">Let's be honest, the dining website is a little messy. We're making everything look nice so that you never have any holdups about visiting our beautiful site.</p>
           </div>
         </div>
       </div>
@@ -102,20 +97,14 @@ any holdups about visiting our beautiful site.</p>
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Group Bio</h5>
-          <p class="grey-text text-lighten-4">We are a group that formed
- in October 2016 after an in-class mixer. We have Ademola Olayinka 
-(Ademolition), Nick Ngare (NickNick), Jennifer Du (JenJen), and Bao Doan
- (BaoBao). We thought of the wonderful idea of getting all of our food 
-information in one place since a lot of us are into our health and 
-fitness. We are working closely with Student Affairs at Duke University 
-to make this a possiblity.</p>
+          <p class="grey-text text-lighten-4">We are a group that formed in October 2016 after an in-class mixer. We have Ademola Olayinka (Ademolition), Nick Ngare (NickNick), Jennifer Du (JenJen), and Bao Doan (BaoBao). We thought of the wonderful idea of getting all of our food information in one place since a lot of us are into our health and fitness. We are working closely with Student Affairs at Duke University to make this a possiblity.</p>
 
 
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">People</h5>
           <ul>
-            <li><a class="white-text" href="http://ademolaolayinka.com/">Ademola Olayinka</a></li>
+            <li><a class="white-text" href="http://ademolaolayinka.com">Ademola Olayinka</a></li>
             <li><a class="white-text" href="#">Jennifer Du</a></li>
             <li><a class="white-text" href="#">Nick Ngare</a></li>
             <li><a class="white-text" href="#">Bao Doan</a></li>
@@ -142,11 +131,12 @@ to make this a possiblity.</p>
 
   <!--  Scripts-->
   <!-- // <script src="./materialize/js/jquery-2.1.1.min.js"></script> -->
-  <script src="Nutri-info_files/jquery-2.js"></script>
-  <script src="Nutri-info_files/materialize.js"></script>
-  <script src="Nutri-info_files/materialize_002.js"></script>
-  <script src="Nutri-info_files/init.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="./materialize/js/materialize.js"></script>
+  <script src="./materialize/js/materialize.min.js"></script>
+  <script src="./materialize/js/init.js"></script>
+  <script src="bars.js"></script>
 
   
 
-<div class="hiddendiv common"></div><div class="drag-target" style="left: 0px; touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></div><div class="drag-target" style="left: 0px;"></div></body></html>
+<div class="hiddendiv common"></div><div class="drag-target" style="left: 0px; touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></div></body></html>
