--- a/php-beers/index.html
+++ b/php-beers/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
-  <title>Nutri-info</title>
+  <title>Cameron Hungries</title>
 
   <link href='./Media/dukedining.png' rel='icon'>
 
@@ -38,12 +38,12 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">Nutri-info</h1>
+      <h1 class="header center orange-text">Cameron Hungries</h1>
       <div class="row center">
-        <h5 class="header col s12 light">A place to maintain your health and your food points. All in one place</h5>
+        <h5 class="header col s12 light">A place to maintain your health. All in one place</h5>
       </div>
       <div class="row center">
-        <a href="https://sites.duke.edu/compsci316_01_f2016/" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a href="./menu.php" id="download-button"><i class='material-icons' style='font-size:175px'>play_circle_filled</i></a>
       </div>
       <br><br>
 
@@ -58,28 +58,25 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text">Unified</h2>
-            <h5 class="center">One location for restaurant times</h5>
+            <h2 class="center light-blue-text">Menus</h2>
 
-            <p class="light">We were tired of going all the way to Duke Dining's website only to find a mess of a list of restaurants with varying times all over the place. So what we have made here is one location that can wither everything down for you and show you what's open right now and what they're serving.</p>
+            <p class="center">With Cameron Hungries, you can go to our sophisticated menu page and look up the nutrition of all your favourite foods without changing the page.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text">Nutrition</h2>
-            <h5 class="center">Find your calories</h5>
 
-            <p class="light">We also didn't like that it is such an arduous process to find out how many calories your banana pudding cake had, so we added all of that here so that users can easily find out how much tey're eating. Whether it's bulking or cutting season, you'll know just enought to keep your macros right and get those gainz or cuts.</p>
+            <p class="center">It is now easier than ever to find out how many calories are in that Mocha Pumpik Spice Cappuccino. Just make your own account and start adding whatever you've eaten that day to your list. We'll handle the rest for you.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text">Aesthetics</h2>
-            <h5 class="center">Beautiful aesthetics</h5>
 
-            <p class="light">Let's be honest, the dining website is a little messy. We're making everything look nice so that you never have any holdups about visiting our beautiful site.</p>
+            <p class="center">Let's be honest, the dining website is a little messy. We're making everything look nice so that you never have any holdups about visiting our beautiful site.</p>
           </div>
         </div>
       </div>
@@ -97,7 +94,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Group Bio</h5>
-          <p class="grey-text text-lighten-4">We are a group that formed in October 2016 after an in-class mixer. We have Ademola Olayinka (Ademolition), Nick Ngare (NickNick), Jennifer Du (JenJen), and Bao Doan (BaoBao). We thought of the wonderful idea of getting all of our food information in one place since a lot of us are into our health and fitness. We are working closely with Student Affairs at Duke University to make this a possiblity.</p>
+          <p class="grey-text text-lighten-4">We are a group that formed in October 2016 after an in-class mixer. We have Ademola Olayinka (Ademolition), Nick Ngare (NickNick), Jennifer Du (JenJen), and Bao Doan (BaoBao). We thought of the wonderful idea of getting all of our food information in one place since a lot of us are into our health and fitness. <strike>We are working closely with Student Affairs at Duke University to make this a possiblity.</strike> Student health ain't gave us shit.</p>
 
 
         </div>
@@ -111,12 +108,12 @@
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Other Information</h5>
+          <h5 class="white-text">Special Thanks</h5>
           <ul>
-            <li><a class="white-text" href="#">TBA</a></li>
-            <li><a class="white-text" href="#">TBA 2</a></li>
-            <li><a class="white-text" href="#">TBA 3</a></li>
-            <li><a class="white-text" href="#">TBA 4</a></li>
+            <li><a class="white-text" href="#">Professor Jun Yang</a></li>
+            <li><a class="white-text" href="#">Jenny's Laptop and VM for working</a></li>
+            <li><a class="white-text" href="#">Google Searches</a></li>
+            <li><a class="white-text" href="#">PHP Help Forums</a></li>
           </ul>
         </div>
       </div>
