--- a/php-beers/index.html
+++ b/php-beers/index.html
@@ -43,7 +43,7 @@
         <h5 class="header col s12 light">A place to maintain your health. All in one place</h5>
       </div>
       <div class="row center">
-        <a href="./menu.php" id="download-button"><i class='material-icons' style='font-size:175px'>play_circle_filled</i></a>
+        <a href="./menu-n.php" id="download-button"><i class='material-icons' style='font-size:175px'>play_circle_filled</i></a>
       </div>
       <br><br>
 
